# mashine_Learning

./: README.md  main.py  pyproject.toml  requirements.txt
01 simple linear regresition/: SLR.ipynb
02 Multiple Linear regression/: MLR.ipynb
02 practical preprocessing/: Result.csv  Weight_model.joblib  preprocessing.ipynb
03 Feature Engineering/: Cleaned.csv  Feature Engineering.ipynb  Results.csv  model.joblib  ohe.joblib  scaler.joblib
03 pipelines/: Cars93.csv  pipelines.ipynb
04 Automated Preprocessing/: Results.csv  pipeline.ipynb  pre.joblib
04 feature Selection/: backward selection.ipynb  backward_pre.joblib  forward selection.ipynb
05 Regularization/: Ridge_Lesso.ipynb
05 feature Selection/: Backward_results.csv  backward selection.ipynb  backwardResult.csv  backward_model.joblib  backward_pre.joblib  forward selection.ipynb  forward_pre.joblib  forward_results.csv
06 Regularization/: Regularization.ipynb  RidgeResults.csv  pre.joblib  ridge.joblib
06 regression project/: RidgeResults.csv  price_ridge.joblib  project.ipynb
07 Regression project/: pre.joblib
08 Logistic Regression/: iris_model.joblib  logistic.ipynb  pre.joblib
09 Decision Tree Classification/: DTC.ipynb  drugs_model.joblib  drugtest.csv  pre.joblib  results.csv
10 Decision Tree Regression/: DTR.ipynb  DTR_Results.csv  dtr_model.joblib  pre.joblib  test_PowerPlant.csv
